Archive2/88/b8bcdb5687bea5/output
main.cpp: In function 'int main()':
main.cpp:48:60: error: template argument 1 is invalid
     auto b1 = boost::shared_ptr<dynamic_cast<Derived>(Base)>(new Base(1));
                                                            ^
